# trading-agents

./: .gitignore  README.md  data模块文件结构.md  docker-compose.yml  dockerfile  gemini回答的技术栈.md  main.py  postgreSQL数据库设计.md  postgreSQL数据库设计@20251123.md  prd.md  project-structure.md  pyproject.toml  项目系统文件结构.md
.github/workflows/: deploy copy.yml  deploy.yml
docs/: 1.md
prompt/: 系统提示词应当包含的内容.md
src/bronco_trade_agents/: config.py  database.py  database文件说明.md  nasdaq100.txt
src/bronco_trade_agents/data/: collector.py  models.py  models文件说明.md  pipeline.py  repositories.py  repositories文件说明.md
src/bronco_trade_agents/data/clients/: massive.py
src/bronco_trade_agents/data/schedulers/: market_clock.py  market_clock文件说明.md
src/bronco_trade_agents/utils/: logger.py
